--- a/productos.html
+++ b/productos.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="productos.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
