Eliminando imagenes ambiguas y agregando otras img

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     </header>
 
-    <img class="banner" src="img/banner2.jpg">
+    <img class="banner" src="imagenes/banner-principal.jpg">
 
     <main>
         <section class="principal">
@@ -77,7 +77,7 @@
                         <li class="items">Profesionales calificados</li>
                         <li class="items">Puntualidad</li>
                         <li class="items">Limpieza</li>
-                    </ul><img class="imagen-diferenciales" src="img/banner.jpg">
+                    </ul><img class="imagen-diferenciales" src="imagenes/banner-diferenciales.jpg">
                 </div>
               
                 <div class="video">
@@ -92,7 +92,7 @@
 
     <footer>
         <h1><img src="imagenes/logo-blanco.png" alt="Logo de la barbería Alura"></h1>
-        <p class="copyrigt"> &copy Copyrigth Barberia Alura -2022 </p>
+        <p class="copyrigt"> &copy; Copyrigth Joel Llacsahuache copia -2022 </p>
     </footer>
 
 </body>
